--- a/src/components/buttons/DownloadButton.astro
+++ b/src/components/buttons/DownloadButton.astro
@@ -11,7 +11,7 @@ interface DownloadButton {
 const { text, url, isDownload, extendClass } = Astro.props;
 
 const buttonClasses = cntl`
-    btn-xs
+    btn-sm
     btn
     btn-outline  
     ${extendClass} 
