--- a/src/components/buttons/SendMessageButton.astro
+++ b/src/components/buttons/SendMessageButton.astro
@@ -11,7 +11,7 @@ interface OpenTabProps {
 const { text, url, extendClass } = Astro.props as OpenTabProps;
 
 const buttonClasses = cntl`
-    btn-xs
+    btn-sm
     btn
     btn-outline  
     ${extendClass} 
