--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -96,7 +96,7 @@ const statsGridClasses = cntl`
       <img
         class="block mx-auto h-32 lg:h-48 rounded-full sm:mx-auto"
         src={profilePhoto.src}
-        alt="Handika's profile photo"
+        alt="Handika's profile"
       />
       <h1 class={titleClasses}>
         Hi, I'm <strong>Heru Handika</strong>
