--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -176,6 +176,13 @@ const spaceClasses = cntl`
         studies while allowing underfunded labs to benefit from the decreasing cost
         of genomic sequencing.
         <div class="mt-4 mb-2 text-semibold">Publications:</div>
+        <ProjectPubs author="Handika et al.">
+          <PubButton
+            author="Handika, H., Moncrieff, A. E., Del-Rio G., Canton, R., Rutledge, S. L., Hernández-Canchola, G., Babb-Biernacki, S. J.  Chipps, A. S., Pérez-Amaya, N., Chornelia, A., Morales-Martínez, D. M., McCallum, Q., Thom, G., Esselstyn, J. A"
+            year="In prep"
+            title="NAHPU: A field cataloging application for efficient, repeatable, and inclusive museum-based evolutionary studies"
+          />
+        </ProjectPubs>
         <ProjectPubs author="Handika and Esselstyn">
           <PubButton
             author="Handika, H. and Esselstyn, J. A"
