Update publication and move manuscript in prep into its section.

--- a/src/pages/pubs.astro
+++ b/src/pages/pubs.astro
@@ -15,14 +15,8 @@ import Background from "../components/Background.astro";
       <PageTitle title="Publications" />
       <Publication year="Forthcoming" />
       <Forthcoming
-        author="Handika, H., Moncrieff, A. E., Del-Rio G., Canton, R., Rutledge, S. L., Hernández-Canchola, G., Babb-Biernacki, S. J.  Chipps, A. S., Pérez-Amaya, N., Chornelia, A., Morales-Martínez, D. M., McCallum, Q., Thom, G., Esselstyn, J. A"
-        year="In prep"
-        title="NAHPU: A field cataloging application for efficient, repeatable, and inclusive museum-based evolutionary studies"
-        journal=""
-      />
-      <Forthcoming
         author="Giarla, T. C., Achmadi, A.S., Fabre, P. H., Handika, H., Chipps, A. S., Swanson, M.T., Nations, J. A., Morni, M. A., William-Dee, J., Inayah, N., Jayanti, E. D., Nurdin, M.R.T.J., Griffin, K. E., Khan, F. A. A., Heaney, L. R., Rowe, K. C., Esselstyn, J. A"
-        year="Accepted"
+        year="In press"
         title="Systematics and historical biogeography of Crunomys and Maxomys (Muridae: Murinae), with the description of a new species from Sulawesi and new genus-level classification"
         journal="Journal of Mammalogy"
       />
@@ -191,6 +185,20 @@ import Background from "../components/Background.astro";
           pageVol="2(2), pp.103-109"
           doi="https://doi.org/10.25077/jbioua.2.2.%25p.2013"
           pdfUrl="https://www.researchgate.net/publication/280605376_Komunitas_Mamalia_Kecil_Terestrial_di_Gunung_Singgalang_Sumatera_Barat"
+        />
+      </Publication>
+      <Publication year="Manuscript in prep">
+        <Forthcoming
+          author="Handika, H., Moncrieff, A. E., Del-Rio G., Canton, R., Rutledge, S. L., Hernández-Canchola, G., Babb-Biernacki, S. J.  Chipps, A. S., Pérez-Amaya, N., Chornelia, A., Morales-Martínez, D. M., McCallum, Q., Thom, G., Esselstyn, J. A"
+          year="In prep"
+          title="NAHPU: A field cataloging application for efficient, repeatable, and inclusive collection-based evolutionary studies"
+          journal=""
+        />
+        <Forthcoming
+          author="Handika, H., Rowe, K.C., Achmadi, A.S., Swanson, M. T., and Esselstyn, J.A"
+          year="In prep"
+          title="A new species of Frateromys from the Northern Peninsula of Sulawesi, Indonesia"
+          journal=""
         />
       </Publication>
     </div>
