Add other projects.

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -118,7 +118,7 @@ const spaceClasses = cntl`
         <ProjectPubs author="Giarla et. al.">
           <PubButton
             author="Giarla, T. C., Achmadi, A.S., Fabre, P. H., Handika, H., Chipps, A. S., Swanson, M.T., Nations, J. A., Morni, M. A., William-Dee, J., Inayah, N., Jayanti, E. D., Nurdin, M.R.T.J., Griffin, K. E., Khan, F. A. A., Heaney, L. R., Rowe, K. C., Esselstyn, J. A"
-            year="Accepted"
+            year="In press"
             title="Systematics and historical biogeography of Crunomys and Maxomys (Muridae: Murinae), with the description of a new species from Sulawesi and new genus-level classification"
             journal="Journal of Mammalogy"
           />
@@ -180,7 +180,7 @@ const spaceClasses = cntl`
           <PubButton
             author="Handika, H., Moncrieff, A. E., Del-Rio G., Canton, R., Rutledge, S. L., Hernández-Canchola, G., Babb-Biernacki, S. J.  Chipps, A. S., Pérez-Amaya, N., Chornelia, A., Morales-Martínez, D. M., McCallum, Q., Thom, G., Esselstyn, J. A"
             year="In prep"
-            title="NAHPU: A field cataloging application for efficient, repeatable, and inclusive museum-based evolutionary studies"
+            title="NAHPU: A field cataloging application for efficient, repeatable, and inclusive collection-based evolutionary studies"
           />
         </ProjectPubs>
         <ProjectPubs author="Handika and Esselstyn">
@@ -193,6 +193,66 @@ const spaceClasses = cntl`
             isRequest={true}
           />
         </ProjectPubs>
+      </Content>
+      <SectionHead
+        title="GPU-Agnostic, Low-cost Machine Learning Approaches"
+        subtitle="Developing on-devices, cross-platform machine-learning methods to improve biodiversity research"
+      />
+      <Content>
+        Coming soon as a part of my postdoc project at <Link
+          text="Porto's lab"
+          url="https://agporto.github.io/"
+        />, the University of Florida.
+      </Content>
+      <hr class="my-4 border-t-2 border-chetwode-200 rounded-full" />
+      <SectionHead
+        title="Other Projects"
+        subtitle="Projects on other taxa and regions"
+      />
+      <Content>
+        <h3 class="font-semibold">Specimen Digitization</h3>
+        <p>
+          This project is led by Dr. Nurainas at the Herbarium Universitas
+          Andalas (ANDA) funded through the collection and data mobilization
+          grant provided by the Global Biodiversity Information Facility (GBIF).
+          We aim to digitize >65,000 sheets of the herbarium specimens at ANDA
+          and make the data accessible through the GBIF portal.
+        </p>
+        <div class="mt-4 mb-2 text-semibold">Published datasets:</div>
+        <ProjectPubs author="Nurainas et. al.">
+          <PubButton
+            author="Nurainas N, Amolia R R, Taufiq A, Handika H, Syamsuardi S"
+            year="2024a"
+            title="Flora of Sumatra : Vascular plant collection from Batang Toru Forest deposited in ANDA Herbarium"
+            doi="https://doi.org/10.15468/ue7xy"
+          />
+          <span class={spaceClasses}>,</span>
+          <PubButton
+            author="Nurainas N, Taufiq A, Handika H, Syamsuardi S"
+            year="2024b"
+            title="lora of Sumatra: Vascular plant collection of selected families deposited at Herbarium of Andalas University (ANDA)"
+            doi="https://doi.org/10.15468/sncpxn"
+          />
+          <span class={spaceClasses}>,</span>
+          <PubButton
+            author="Nurainas N, Taufiq A, Handika H, Harapan T S, Syamsuardi S"
+            year="2024c"
+            title="Flora Sumatra: Digitizing and data basing specimens of the Sumatran Flora deposited at Herbarium Universitas Andalas (ANDA)-Part 2"
+            doi="https://doi.org/10.15468/55evew "
+          />
+        </ProjectPubs>
+      </Content>
+      <Content>
+        <h3 class="font-semibold">
+          Genomics and Systematics of Antbirds in the Neotropics
+        </h3>
+        <p>
+          This project is led by <Link
+            text="Dr. Glaucia Del-Rio"
+            url="https://www.gdel-rio.com/"
+          />, the University of Florida. We aim to understand the genomic basis
+          of speciation and systematics of antbirds in the Neotropics.
+        </p>
       </Content>
     </div>
   </MainPage>
