--- a/src/pages/pubs.astro
+++ b/src/pages/pubs.astro
@@ -115,7 +115,7 @@ import Background from "../components/Background.astro";
         <Published
           author="Harapan, T.S., Agung, A.P., Handika, H., Novarino, W., Tjong, D.H. and Tomlinson, K.W"
           year={2020}
-          title="ew records and potential geographic distribution of Elongated Caecilian, Ichthyophis elongatus Taylor, 1965 (Amphibia, Gymnophiona, Ichthyophiidae), endemic to West Sumatra, Indonesia"
+          title="New records and potential geographic distribution of Elongated Caecilian, Ichthyophis elongatus Taylor, 1965 (Amphibia, Gymnophiona, Ichthyophiidae), endemic to West Sumatra, Indonesia"
           journal="Check List, "
           pageVol="16(6), pp. 1695-1701"
           doi="https://doi.org/10.15560/16.6.1695"
