--- a/src/components/Content.astro
+++ b/src/components/Content.astro
@@ -2,4 +2,6 @@
 
 ---
 
-<p class="text-md text-chetwode-950 dark:text-chetwode-50"><slot /></p>
+<div class="text-md text-chetwode-950 dark:text-chetwode-50">
+  <slot />
+</div>
