--- a/src/pages/pubs.astro
+++ b/src/pages/pubs.astro
@@ -20,6 +20,12 @@ import Background from "../components/Background.astro";
         title="Systematics and historical biogeography of Crunomys and Maxomys (Muridae: Murinae), with the description of a new species from Sulawesi and new genus-level classification"
         journal="Journal of Mammalogy"
       />
+      <Forthcoming
+        author="Burgin, C. J., Zijlstra, J. S., Becker, M. A., Handika, H., Widness, J., Liphardt, S., Huckaby, D. G., Upham, N. S"
+        year="Submitted"
+        title="How many mammal species are there now? Updates and trends in taxonomic, nomenclatural, and geographic knowledge"
+        journal="Journal of Mammalogy"
+      />
       <Publication year="2024">
         <Published
           author="Handika, H. and Esselstyn, J. A"
