Fix missing journal and pdf link.

--- a/src/pages/pubs.astro
+++ b/src/pages/pubs.astro
@@ -153,8 +153,8 @@ import Background from "../components/Background.astro";
           title="A second breeding record of Chestnut-naped Forktails Enicurus ruficapillus in Sumatra, and observations suggesting females alone incubate"
           journal="Kukila"
           pageVol="21, pp.13-16"
-          doi=""
-          pdfUrl="https://hhandika.com/dl/janra-et-al-kukila.pdf"
+          altUrl="https://kukila.org/index.php/KKL/article/view/533"
+          pdfUrl="https://kukila.org/index.php/KKL/article/view/533/504"
         />
         <Published
           author="Demos, T.C., Achmadi, A.S., Handika, H., Rowe, K.C. and Esselstyn, J.A"
