Fix margin error.

--- a/src/components/pubs/Forthcoming.astro
+++ b/src/components/pubs/Forthcoming.astro
@@ -24,7 +24,7 @@ const { author, year, title, journal, doi, pdfUrl } =
           <>
             {part}
             {index < array.length - 1 && (
-              <strong class="text-chetwode-700 dark:text-chetwode-400">
+              <strong class="text-chetwode-700 dark:text-chetwode-400 -mr-1">
                 Handika, H.
               </strong>
             )}
