--- a/src/components/pubs/Published.astro
+++ b/src/components/pubs/Published.astro
@@ -39,7 +39,7 @@ const {
           <>
             {part}
             {index < array.length - 1 && (
-              <strong class="text-chetwode-700 dark:text-chetwode-400">
+              <strong class="text-chetwode-700 dark:text-chetwode-400 -mr-1">
                 Handika, H.
               </strong>
             )}
